--- a/chelsea-slade-portfolio/src/App.css
+++ b/chelsea-slade-portfolio/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
+/* Header */
+.Header {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  margin: auto 0;
+  background-color: #d1e6ee61;  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Header h1 {
+  color: rgb(54, 111, 148);
+  font-size: 2.5em;
+  margin: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Banner {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+} 
+
+.nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.nav a {
+  color: rgb(68, 130, 171);
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav a:visited {
+  color: rgb(68, 130, 171);
+}
+
+.nav a:hover {
+  color: rgb(16, 34, 52);
+}
+
+
+.navList {
+  list-style: none;
+  flex-direction: row;
+  display: flex;
+  margin: auto 0;
+}
+
+.navList li {
+  display: flex; 
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+/* Footer */
+.Footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background-color: #d1e6ee61;
+  font-size: 14px;  
 }
