--- a/chelsea-slade-portfolio/src/App.css
+++ b/chelsea-slade-portfolio/src/App.css
@@ -1,5 +1,12 @@
+/* Main Styles */
+body {
+  background-color: #d1e6ee61;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(54, 111, 148);
+}
+
 /* Header */
-.Header {
+.header {
   display: flex;
   justify-content: space-around;
   width: 100%;
@@ -7,13 +14,13 @@
   background-color: #d1e6ee61;  
 }
 
-.Header h1 {
+.header h1 {
   color: rgb(54, 111, 148);
   font-size: 2.5em;
   margin: 10px;
 }
 
-.Banner {
+.banner {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -58,7 +65,7 @@
 }
 
 /* Footer */
-.Footer {
+.footer {
   display: flex;
   justify-content: center;
   width: 100%;
