--- a/chelsea-slade-portfolio/src/App.css
+++ b/chelsea-slade-portfolio/src/App.css
@@ -1,8 +1,44 @@
 /* Main Styles */
 body {
-  background-color: #d1e6ee61;
+  background-color: white;
   font-family: Arial, Helvetica, sans-serif;
-  color: rgb(54, 111, 148);
+  color: rgb(61, 54, 92);
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.genButton {
+  background-color: rgb(201, 87, 146);
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.genButton:hover {
+  background-color: rgb(248, 181, 95);
+  color: white;
+  transition: 0.6s;
 }
 
 /* Header */
@@ -11,43 +47,34 @@ body {
   justify-content: space-around;
   width: 100%;
   margin: auto 0;
-  background-color: #d1e6ee61;  
-}
-
-.header h1 {
-  color: rgb(54, 111, 148);
-  font-size: 2.5em;
-  margin: 10px;
+  font-size: 22px;
 }
 
 .banner {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   width: 100%;
   height: 100%;
+  margin-bottom: 10px;
 } 
 
 .nav {
   display: flex;
-  justify-content: center;
-  align-items: center;
   margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .nav a {
-  color: rgb(68, 130, 171);
+  color: rgb(61, 54, 92);
   text-decoration: none;
 }
 
 .nav a:visited {
-  color: rgb(68, 130, 171);
+  color: rgb(61, 54, 92);
 }
 
 .nav a:hover {
-  color: rgb(16, 34, 52);
+  color: rgb(201, 87, 146);
 }
 
 
@@ -60,8 +87,8 @@ body {
 
 .navList li {
   display: flex; 
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 /* Footer */
@@ -69,6 +96,35 @@ body {
   display: flex;
   justify-content: center;
   width: 100%;
-  background-color: #d1e6ee61;
-  font-size: 14px;  
+  color: rgb(61, 54, 92);
+  font-size: 16px;  
+  margin-top: 10px;
+}
+
+/* Images */
+.imageContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+#introPic {
+  margin: 20px;
+  border-radius: 50%;
+  height: 300px;
+  object-fit: cover;
+}
+
+/* Home */
+.home h1 {
+  color: rgb(61, 54, 92);
+  margin: 5px;
+}
+
+.home h2 {
+  color: rgb(61, 54, 92);
+  margin: 0;
+  font-size: 20px;
+  text-align: center;
 }
