--- a/chelsea-slade-portfolio/src/App.css
+++ b/chelsea-slade-portfolio/src/App.css
@@ -110,11 +110,18 @@ body {
 /* Footer */
 .footer {
   display: flex;
-  justify-content: center;
   width: 100%;
   color: rgb(61, 54, 92);
   font-size: 16px;  
-  margin-top: 20px;
+  margin-top: 40px;
+  justify-content: center;
+}
+
+.socialIcon {
+  height: 30px;
+  width: 30px;
+  margin: 0 15px;
+  opacity: 0.7;
 }
 
 /* Images */
