--- a/chelsea-slade-portfolio/src/App.css
+++ b/chelsea-slade-portfolio/src/App.css
@@ -77,7 +77,6 @@ body {
   color: rgb(201, 87, 146);
 }
 
-
 .navList {
   list-style: none;
   flex-direction: row;
@@ -113,7 +112,7 @@ body {
   width: 100%;
   color: rgb(61, 54, 92);
   font-size: 16px;  
-  margin-top: 40px;
+  margin-top: 80px;
   justify-content: center;
 }
 
@@ -161,6 +160,14 @@ body {
   text-align: center;
 }
 
+.home h4 {
+  color:rgb(201, 87, 146);
+  margin: 10px;
+  font-size: 16px;
+  font-weight: 400;
+  text-align: center;
+}
+
 .introBox {
   display: flex;
   flex-direction: row;
@@ -180,5 +187,22 @@ body {
 
 .textBox p {
   font-size: 18px;
-  padding: 20px;
+  padding: 15px;
+}
+
+/* About */
+.about {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+}
+
+.aboutText {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  margin-left: 60px;
+  margin-right: 60px;
 }
