--- a/src/App.css
+++ b/src/App.css
@@ -244,3 +244,15 @@ body {
   height: 100px;
 }
 
+.resumeList {
+  
+}
+
+.interestsList li {
+  list-style: none;
+}
+
+.smallIcon {
+  width: 50px;
+  height: 50px;
+}
