--- a/src/App.css
+++ b/src/App.css
@@ -55,13 +55,11 @@ body {
   flex-direction: column;
   width: 100%;
   height: 100%;
-  margin-bottom: 10px;
 } 
 
 .nav {
   display: flex;
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .nav a {
@@ -81,7 +79,6 @@ body {
   list-style: none;
   flex-direction: row;
   display: flex;
-  margin-top: 10px;
 }
 
 .navList li {
@@ -94,6 +91,7 @@ body {
   color: white;
   border: none;
   padding: 10px 20px;
+  margin-bottom: 20px;
   text-align: center;
   text-decoration: none;
   font-size: 20px;
@@ -113,6 +111,7 @@ body {
   color: rgb(61, 54, 92);
   font-size: 16px;  
   margin-top: 80px;
+  margin-bottom: 20px;
   justify-content: center;
 }
 
@@ -124,8 +123,10 @@ body {
 }
 
 .attribution a {
+  display: flex;
+  justify-content: center;
   font-size: 12px;
-  color: rgb(201, 87, 146);
+  color: rgb(248, 181, 95);
   text-decoration: none;
 }
 
@@ -274,6 +275,16 @@ body {
   display: flex;
   flex-direction: row;
   margin-bottom: 20px;
+  justify-content: center;
+}
+
+.addSkills ul {
+  margin-right: 60px;
+}
+
+.addSkills li {
+  margin-bottom: 5px;
+  font-size: 16px;
 }
 
 .certList {
@@ -311,6 +322,10 @@ body {
   margin-bottom: 50px;
   justify-content: center;
   align-items: center;
+}
+
+.resumeLink p {
+  font-size: 16px;
 }
 
 .interestsList {
