--- a/src/App.css
+++ b/src/App.css
@@ -211,27 +211,42 @@ body {
   padding: 15px;
 }
 
-.aboutBanner {
-  height: 200px;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  background-color: rgb(219, 240, 246);
+.scroller {
+  max-width: 400px;
 }
 
-.iconBanner {
+.scroller[data-animated="true"] {
+  overflow: hidden;
+  -webkit-mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+  mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+}
+
+.scroller[data-animated="true"] .scrollerBanner {
+  flex-wrap: nowrap;
+  animation: scroll 20s linear infinite;
+}
+
+@keyframes scroll {
+  from {
+    transform: translateX(0); 
+  }
+  to {
+    transform: translateX(-50%); 
+  }
+}
+
+.scrollerBanner {
   display: flex;
+  flex-wrap: wrap;
   position: relative;
-  width: 100%;
-  height: 180px;
-  margin-top: 20px;
+   width: max-content;
+  padding-block: 20px;
 }
 
-.iconBanner img {
-  /* position: absolute; */
+.scrollerBanner img {
   height: 100px;
   width: 100px;
+  flex-shrink: 0;
 }
 
 /* About */
