--- a/src/App.css
+++ b/src/App.css
@@ -143,9 +143,6 @@ body {
 /* Images */
 .imageContainer {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
 }
 
 #introPic {
@@ -178,7 +175,6 @@ body {
   color: rgb(61, 54, 92);
   margin: 0;
   font-size: 20px;
-  text-align: center;
 }
 
 .home h4 {
@@ -186,7 +182,6 @@ body {
   margin: 10px;
   font-size: 16px;
   font-weight: 400;
-  text-align: center;
 }
 
 .introBox {
@@ -204,6 +199,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100%;
+  width: 50%;
 }
 
 .textBox p {
@@ -211,8 +207,15 @@ body {
   padding: 15px;
 }
 
+.introLine {
+  width: 60%;
+}
+
 .scroller {
   max-width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .scroller[data-animated="true"] {
@@ -239,7 +242,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   position: relative;
-   width: max-content;
+  width: max-content;
   padding-block: 20px;
 }
 
@@ -252,14 +255,17 @@ body {
 /* About */
 .about {
   display: flex;
-  width: 100%;
-  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100%;
 }
 
 .aboutText {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 100%;
 }
 
@@ -268,37 +274,43 @@ body {
   width: 100%;
   flex-direction: row;
   justify-content: center;
-  margin-bottom: 20px;
+  align-items: center;
 }
 
 .techSkillList ul {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+  padding: 0;
 }
 
 .techSkillList li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
   list-style-type: none;
-  margin-left: 20px;
-  padding: 10px;
-}
-
-.techSkillList img:hover {
-  transition: 1s;
-  height: 120px;
+  font-size: 18px;
+  color: rgb(61, 54, 92);
 }
 
 .addSkills {
   display: flex;
   flex-direction: row;
-  margin-bottom: 20px;
+  gap: 20px;
   justify-content: center;
 }
 
 .addSkills ul {
-  margin-right: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 5px;
 }
 
 .addSkills li {
-  margin-bottom: 5px;
   font-size: 16px;
 }
 
@@ -311,17 +323,14 @@ body {
 
 .certList ul {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 40px;
+  padding: 0;
 }
 
 .certList li {
   list-style: none;
-  margin-left: 40px;
-  margin-right: auto;
-}
-
-.certList img:hover {
-  transition: 1s;
-  height: 220px;
 }
 
 .icon {
@@ -329,9 +338,9 @@ body {
   height: 100px;
 }
 
-
 .resumeLink {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   margin-top: 30px;
   margin-bottom: 50px;
@@ -340,30 +349,90 @@ body {
 }
 
 .resumeLink p {
+  text-align: center;
   font-size: 16px;
 }
 
 .interestsList {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 80%;
+}
+
+.interestsList ul {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .interestsAlt {
-  display: flex;
-  flex-direction: column;
   background-color: rgb(219, 240, 246);
   width: 100%;
 }
 
 .interestsList li {
+  display: flex;
+  flex-direction: row;
   list-style: none;
   padding: 10px;
-  justify-content: center;
 }
 
-.smallIcon {
+.interestsList img {
+  margin-right: 20px;
   width: 50px;
   height: 50px;
-  margin-right: 20px;
+}
+
+/* Effects */
+.hoverGrow {
+  transition: transform 0.7s ease;
+}
+
+.hoverGrow:hover {
+  transform: scale(1.2);
+}
+
+/*About Mobile adjustments */
+@media (max-width: 768px) {
+  .aboutText h2,
+  .aboutText h3 {
+    text-align: center;
+  }
+
+  .hoverGrow:hover {
+    transform: none;
+  }
+
+  .techSkillList ul {
+    gap: 15px;
+  }
+
+  .techSkillList li {
+    padding: 10px;
+    font-size: 16px;
+  }
+
+  .icon {
+    width: 70px;
+    height: 70px;
+  }
+
+  .addSkills {
+    flex-direction: column; 
+    gap: 20px;
+  }
+
+  .certList ul {
+    justify-content: center;
+    gap: 20px;
+  }
+
+  .interestsList {
+    width: 100%; 
+    padding: 0 15px;
+  }
+
+  .interestsList li {
+    font-size: 14px;
+  }
 }
