--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ body {
   align-items: center;
   width: 100%;
   height: 100%;
+  gap: 30px;
 }
 
 .buttonContainer {
@@ -191,6 +192,7 @@ body {
   align-items: center;
   width: 100%;
   height: 100%;
+  gap: 20px;
 }
 
 .home h1 {
