--- a/src/App.css
+++ b/src/App.css
@@ -237,8 +237,13 @@ body {
   padding: 15px;
 }
 
+
 .introLine {
   width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .scroller {
