Added root colours to CSS for ease of editing

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
+:root {
+  --purple: rgb(61, 54, 92);
+  --pink: rgb(201, 87, 146);
+  --gold: rgb(223, 154, 62);
+  --blue-bg: rgb(219, 240, 246);
+}
+
+
 /* Main Styles */
 body {
   background-color: white;
   font-family: Arial, Helvetica, sans-serif;
-  color: rgb(61, 54, 92);
+  color: var(--purple);
 }
 
 .container {
@@ -24,7 +32,7 @@ body {
 }
 
 .genButton {
-  background-color: rgb(201, 87, 146);
+  background-color: var(--pink);
   color: white;
   border: none;
   border-radius:5px;
@@ -38,7 +46,7 @@ body {
 }
 
 .genButton:hover {
-  background-color: rgb(248, 181, 95);
+  background-color: var(--gold);
   color: white;
   transition: 0.6s;
 }
@@ -56,16 +64,16 @@ body {
 }
 
 .nav a {
-  color: rgb(61, 54, 92);
+  color:var(--purple);
   text-decoration: none;
 }
 
 .nav a:visited {
-  color: rgb(61, 54, 92);
+  color: var(--purple);
 }
 
 .nav a:hover {
-  color: rgb(201, 87, 146);
+  color: var(--pink);
 }
 
 .navList {
@@ -77,7 +85,7 @@ body {
 }
 
 .contactLink {
-  background-color: rgb(201, 87, 146);
+  background-color: var(--pink);
   color: white !important; 
   border: none;
   padding: 10px 20px;
@@ -88,7 +96,7 @@ body {
 }
 
 .contactLink:hover {
-  background-color: rgb(248, 181, 95);
+  background-color: var(--gold);
   color: white;
 }
 
@@ -107,7 +115,7 @@ body {
 .bar {
   height: 3px;
   width: 100%;
-  background-color: rgb(201, 87, 146);
+  background-color: var(--pink);
   border-radius: 2px;
 }
 
@@ -137,7 +145,7 @@ body {
 .footer {
   display: flex;
   width: 100%;
-  color: rgb(61, 54, 92);
+  color: var(--purple);
   font-size: 16px;  
   margin-top: 80px;
   margin-bottom: 20px;
@@ -155,12 +163,12 @@ body {
   display: flex;
   justify-content: center;
   font-size: 10px;
-  color: rgb(248, 181, 95);
+  color:var(--gold);
   text-decoration: none;
 }
 
 .attribution a:visited {
-  color:rgb(201, 87, 146);
+  color:var(--pink);
 }
 
 .attribution a:hover {
@@ -197,18 +205,18 @@ body {
 }
 
 .home h1 {
-  color: rgb(61, 54, 92);
+  color: var(--purple);
   margin: 5px;
 }
 
 .home h2 {
-  color: rgb(61, 54, 92);
+  color: var(--purple);
   margin: 0;
   font-size: 20px;
 }
 
 .home h4 {
-  color:rgb(201, 87, 146);
+  color:var(--pink);
   margin: 10px;
   font-size: 16px;
   font-weight: 400;
@@ -328,7 +336,7 @@ body {
   padding: 20px;
   list-style-type: none;
   font-size: 18px;
-  color: rgb(61, 54, 92);
+  color: var(--purple);
   gap: 10px;
 }
 
@@ -402,7 +410,7 @@ body {
 }
 
 .interestsAlt {
-  background-color: rgb(219, 240, 246);
+  background-color: var(--blue-bg);
   width: 100%;
 }
 
@@ -411,10 +419,11 @@ body {
   flex-direction: row;
   list-style: none;
   padding: 10px;
+  align-items: center;
 }
 
 .interestsList img {
-  margin-right: 20px;
+  margin-right: 15px;
   width: 50px;
   height: 50px;
 }
@@ -441,7 +450,7 @@ body {
   border-radius: 5px;
   line-height: 22px;
   background-color: transparent;
-  border: 1px solid rgb(201, 87, 146);
+  border: 1px solid var(--pink);
   padding: 13px;
   margin-bottom: 15px;
   width:100%;
@@ -455,7 +464,7 @@ body {
 
 .contactForm button {
   width: 200px;
-  background: rgb(201, 87, 146);
+  background: var(--pink);
   border-radius:5px;
   border:0;
   cursor:pointer;
@@ -466,7 +475,7 @@ body {
 }
 
 .contactForm button:hover {
-  background-color: rgb(248, 181, 95);
+  background-color: var(--gold);
   color: white;
   transition: 0.6s;
 }
