--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,7 @@ body {
   display: flex;
   width: 100%;
   font-size: 20px;
+  gap: 20px;
 }
 
 .nav {
@@ -147,8 +148,7 @@ body {
   width: 100%;
   color: var(--purple);
   font-size: 16px;  
-  margin-top: 80px;
-  margin-bottom: 20px;
+  margin-top: 60px;
   justify-content: center;
 }
 
