--- a/src/App.css
+++ b/src/App.css
@@ -183,8 +183,7 @@ body {
 }
 
 #introPic {
-  margin: 20px;
-  border-radius: 50%;
+  border-radius: 100%;
   height: 300px;
   object-fit: cover;
 }
@@ -201,12 +200,11 @@ body {
   align-items: center;
   width: 100%;
   height: 100%;
-  gap: 20px;
 }
 
 .home h1 {
   color: var(--purple);
-  margin: 5px;
+  margin: 20px;
 }
 
 .home h2 {
@@ -217,7 +215,7 @@ body {
 
 .home h4 {
   color:var(--pink);
-  margin: 10px;
+  margin: 8px;
   font-size: 16px;
   font-weight: 400;
 }
@@ -300,6 +298,16 @@ body {
 .projectDisplay {
   display: flex;
   flex-direction: column;
+}
+
+.projectContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+#projectLink {
+  height: 40px;
+  width: 160px;
 }
 
 /* About */
