--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 
 /* Main Styles */
 body {
-  background-color: white;
+  background-color: rgb(251, 251, 255);
   font-family: Arial, Helvetica, sans-serif;
   color: var(--purple);
 }
